@@ -1,6 +1,7 @@
 
    Version 0.1.6
  - Renamed "install-locales" to "install-data" build target.
+ - Adapted to new readchar function names in file system interface.
 
    Version 0.1.5
  + 0.1.5 was finished at about Fri Nov 30 14:02:28 CET 2012.
